welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: ';' expected but 'false' found.
		case _ => if (!estFaceMur) {reculereturn false;}	
                                                         ^